<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">This custom app demonstrates Xtify\'s native push notifications platform</string>
    <string name="app_name">IBM Mobile Push Adv Notif</string>
    <string name="example1_text">Tag A</string>
    <string name="example2_text">Tag B</string>
    <string name="example3_text">Tag C</string>
    <string name="example4_text">Tag D</string>
    <string name="example5_text">Tag E</string>
    <string name="location_text">Location Alerts Enabled</string>
    <string name="notif_text">Notifications Enabled</string>

    <bool name="notif_text_default">true</bool>

    <string name="example1_key">TagA</string>
    <string name="example2_key">TagB</string>
    <string name="example3_key">TagC</string>
    <string name="example4_key">TagD</string>
    <string name="example5_key">TagE</string>
    <string name="notif_key">LAA</string>
    <string name="location_key">ISA</string>
    <string name="reg_button_text">My Xid</string>
    <string name="pushexample_button_1">Sign Up for Wedding Registry</string>
    <string name="pushexample_button_2">Wedding Approaching</string>
    <string name="pushexample_button_3">Check Reward Points</string>
    <string name="pushexample_button_4">Get Special Reward!</string>
    <string name="title_activity_offre">Offre</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_offres">Offres</string>

</resources>
